replaced and removed deprecated token methods
Signed-off-by: Mark Banierink <mark.banierink@nedap.com>